[package]
name = "reopenconnect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "^0.6"
thiserror = "^1"
futures = "^0.3"
tokio = {version = "^1", features = ["full"]}
log = "^0.4"
pretty_env_logger = "^0.4"
syslog = "^5"
structopt = "^0.3"
rustls = {version = "^0.19"}
tokio-rustls = {version = "^0.22"}
webpki = "^0.21.0"
hyper = {version = "^0.14", features = ["http1", "client"]}
str-macro = "^1"
async-trait = "^0.1"
minidom = "^0.13"